# LuomiNestclone

./: .gitignore
backend/: main.py  pyproject.toml
backend/app/api/v1/: deps.py  router.py
backend/app/api/ws/: handler.py  manager.py
backend/app/core/: app_factory.py  config.py  exceptions.py
backend/app/domains/: __init__.py  intent_classifier.py  orchestrator.py  router.py  tool_executor.py
backend/app/domains/agent/: router.py
backend/app/domains/companion/: dialogue_manager.py  persona.py  storyteller.py
backend/app/domains/connect/: device_tracker.py  seamless_follow.py  sync_service.py
backend/app/domains/hwctrl/: gpio_controller.py  mcu_protocol.py  relay_manager.py
backend/app/domains/iot/: custom_device.py  device_hub.py  ha_adapter.py  scene_automation.py  xiaomi_adapter.py
backend/app/domains/mcp_tools/: client.py  gateway.py  registry.py  tool_executor.py
backend/app/domains/social/: ai_to_ai_chat.py  contact_manager.py  friend_request.py  group_chat.py
backend/app/engines/location/: fusion.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  connection.py  manager.py  session.py
backend/app/infrastructure/mqtt/: __init__.py  client.py  publisher.py  topic_manager.py
backend/app/models/: __init__.py  device.py  iot.py  memory.py  message.py  plugin.py  session.py  social.py  user.py
backend/app/platform/linux/: adapter.py
backend/app/runtime/: __init__.py  context.py
backend/app/schemas/: chat.py  common.py  device.py  plugin.py  user.py
backend/app/security/: __init__.py
backend/app/services/: avatar_manager.py  conversation.py  device_service.py  notification.py  plugin_service.py  session_manager.py  skill_service.py
(+106 files in other folders)
