[project]
name = "luominest"
version = "0.1.0"
description = "LuomiNest - Distributed Whole-House AI Companion System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "辰汐项目研发组"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "paho-mqtt>=2.1.0",
    "redis[hiredis]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "asyncpg>=0.30.0",
    "litellm>=1.55.0",
    "openai>=1.58.0",
    "anthropic>=0.42.0",
    "numpy>=2.2.0",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-magic>=0.4.27",
    "pillow>=11.0.0",
    "loguru>=0.7.3",
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
voice = [
    "whisper-cpp-python>=0.2.5",
    "edge-tts>=6.1.18",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.14",
]
render = [
    "cubism-live2d-core>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
